crates/openssl-cli/src/tests/snapshots/openssl__tests__help_tests__help_dgst.snap
---
source: crates/openssl-cli/src/tests/help_tests.rs
expression: stdout
---
Message digest computation and verification

Usage: openssl dgst

Options:
  -h, --help  Print help
