crates/openssl-cli/src/tests/snapshots/openssl__tests__help_tests__help_enc.snap
---
source: crates/openssl-cli/src/tests/help_tests.rs
expression: stdout
---
Symmetric cipher encryption and decryption

Usage: openssl enc

Options:
  -h, --help  Print help
