crates/openssl-cli/src/tests/snapshots/openssl__tests__help_tests__help_genpkey.snap
---
source: crates/openssl-cli/src/tests/help_tests.rs
expression: stdout
---
Generate a private key (algorithm-generic)

Usage: openssl genpkey

Options:
  -h, --help  Print help
