crates/openssl-cli/src/tests/snapshots/openssl__tests__help_tests__help_rand.snap
---
source: crates/openssl-cli/src/tests/help_tests.rs
expression: stdout
---
Random byte generation

Usage: openssl rand

Options:
  -h, --help  Print help
