crates/openssl-cli/src/tests/snapshots/openssl__tests__help_tests__help_s_client.snap
---
source: crates/openssl-cli/src/tests/help_tests.rs
expression: stdout
---
TLS/SSL client diagnostic and testing tool

Usage: openssl s_client

Options:
  -h, --help  Print help
